[gd_scene load_steps=13 format=3 uid="uid://dfedii1fp5cys"]

[ext_resource type="Script" uid="uid://bldpmhcfvt8ra" path="res://scripts/items/base_pot.gd" id="1_nk0mk"]
[ext_resource type="Texture2D" uid="uid://cwaf2mn7nyvrx" path="res://assets/materials/base_cauldron_pots.tres" id="1_ve5sk"]
[ext_resource type="Texture2D" uid="uid://dfrk4lixjx1h7" path="res://assets/textures/green_square_texure.png" id="2_agd8j"]
[ext_resource type="PackedScene" uid="uid://duc0f0jsx8i62" path="res://scenes/items/blooms/base_bloom.tscn" id="2_nk0mk"]

[sub_resource type="CylinderMesh" id="CylinderMesh_agd8j"]
top_radius = 0.4
bottom_radius = 0.2
height = 0.7

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jksag"]
albedo_color = Color(0.372549, 0.372549, 0.372549, 1)
albedo_texture = ExtResource("1_ve5sk")
uv1_triplanar = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nk0mk"]
height = 0.7
radius = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nk0mk"]
albedo_color = Color(0.196078, 0.486275, 0.545098, 1)
albedo_texture = ExtResource("2_agd8j")
uv1_triplanar = true

[sub_resource type="CylinderMesh" id="CylinderMesh_ve5sk"]
top_radius = 0.04
bottom_radius = 0.04
height = 0.4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jksag"]
height = 0.4
radius = 0.04

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8ui6q"]
height = 0.4
radius = 0.04

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ky5pe"]
height = 0.4
radius = 0.04

[node name="BasePot" type="StaticBody3D"]
script = ExtResource("1_nk0mk")
bloom_scene = ExtResource("2_nk0mk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_agd8j")
surface_material_override/0 = SubResource("StandardMaterial3D_jksag")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_nk0mk")

[node name="StemPhase1" type="RigidBody3D" parent="."]
transform = Transform3D(0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0, 0, 1, -0.05, 0.4, 0)
freeze = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="StemPhase1"]
material_override = SubResource("StandardMaterial3D_nk0mk")
mesh = SubResource("CylinderMesh_ve5sk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StemPhase1"]
shape = SubResource("CylinderShape3D_jksag")

[node name="StemPhase2" type="RigidBody3D" parent="."]
transform = Transform3D(0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0, 0, 1, -0.05, 0.4, 0)
visible = false
freeze = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="StemPhase2"]
material_override = SubResource("StandardMaterial3D_nk0mk")
mesh = SubResource("CylinderMesh_ve5sk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StemPhase2"]
shape = SubResource("CylinderShape3D_8ui6q")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="StemPhase2"]
transform = Transform3D(0.866026, 0.5, 0, -0.5, 0.866026, 0, 0, 0, 1, 0.0917359, 0.342363, 0)
material_override = SubResource("StandardMaterial3D_nk0mk")
mesh = SubResource("CylinderMesh_ve5sk")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StemPhase2"]
transform = Transform3D(0.866026, 0.5, 0, -0.5, 0.866026, 0, 0, 0, 1, 0.0917359, 0.342363, 0)
shape = SubResource("CylinderShape3D_8ui6q")

[node name="StemPhase3" type="RigidBody3D" parent="."]
transform = Transform3D(0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0, 0, 1, -0.05, 0.4, 0)
visible = false
freeze = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="StemPhase3"]
material_override = SubResource("StandardMaterial3D_nk0mk")
mesh = SubResource("CylinderMesh_ve5sk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StemPhase3"]
shape = SubResource("CylinderShape3D_ky5pe")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="StemPhase3"]
transform = Transform3D(0.866026, 0.5, 0, -0.5, 0.866026, 0, 0, 0, 1, 0.0917359, 0.342363, 0)
material_override = SubResource("StandardMaterial3D_nk0mk")
mesh = SubResource("CylinderMesh_ve5sk")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StemPhase3"]
transform = Transform3D(0.866026, 0.5, 0, -0.5, 0.866026, 0, 0, 0, 1, 0.0917359, 0.342363, 0)
shape = SubResource("CylinderShape3D_ky5pe")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="StemPhase3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.187239, 0.698785, 0)
material_override = SubResource("StandardMaterial3D_nk0mk")
mesh = SubResource("CylinderMesh_ve5sk")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="StemPhase3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.187239, 0.698785, 0)
shape = SubResource("CylinderShape3D_ky5pe")

[node name="BloomingTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="BloomingTimer" to="." method="_on_blooming_timer_timeout"]
